--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2.4'
 
 services:
-  prod:
+  prod: &prod
     command:
       - garage-door-automation
       - --flagfile=data/flags.txt
@@ -11,6 +11,12 @@ services:
     restart: unless-stopped
     volumes:
       - prod-data:/app/data
+
+  write-prod:
+    <<: *prod
+    command:
+      - line-protocol-cache-consumer
+      - --flagfile=data/write-prod-flags.txt
 
 volumes:
   prod-data:
